feature - new design

--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,40 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="Eduardo Zuñiga" content="Portafolio de Eduardo Zuñiga" />
+    <meta name="theme-color" content="#121212" />
+    <meta
+      name="description"
+      content="I build scalable backend + AI features for SaaS/Fintech teams. 8+ years delivering secure production systems. Spring Boot, AWS, React."
+    />
+    <meta name="author" content="Eduardo Zúñiga" />
+    <meta
+      name="keywords"
+      content="software consultant, backend developer, AI engineer, Spring Boot, AWS, React, fintech, SaaS, Vancouver"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Eduardo Zuñiga</title>
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Eduardo Zúñiga — Software Consultant (Backend, AI, Cloud)"
+    />
+    <meta
+      property="og:description"
+      content="I build scalable backend + AI features for SaaS/Fintech teams. 8+ years delivering secure production systems."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:url" content="https://eduzsantillan.dev" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eduardo Zúñiga — Software Consultant" />
+    <meta
+      name="twitter:description"
+      content="I build scalable backend + AI features for SaaS/Fintech teams."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <title>Eduardo Zúñiga — Software Consultant (Backend, AI, Cloud)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
